--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,74 +1,75 @@
-name: Build and Deploy to GKE with Helm
+name: CI/CD to GKE using Helm
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
 
 env:
   PROJECT_ID: venu-5198
   REGION: us-east1
-  REPO_NAME: my-repo
+  REPOSITORY: my-repo
+  IMAGE: fastapi-app
   CLUSTER_NAME: fastapi-cluster
-  IMAGE_NAME: fastapi-app
-  DEPLOYMENT_NAME: fastapi-deployment
-  NAMESPACE: default
 
 jobs:
-  build:
-    name: Build and Push Docker Image to Artifact Registry
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # ------------------------------
+      # 1️⃣ Checkout Code
+      # ------------------------------
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Google Cloud SDK
+      # ------------------------------
+      # 2️⃣ Authenticate to Google Cloud
+      # ------------------------------
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      # ------------------------------
+      # 3️⃣ Set up gcloud SDK
+      # ------------------------------
+      - name: Set up gcloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
 
+      # ------------------------------
+      # 4️⃣ Configure Docker authentication
+      # ------------------------------
       - name: Configure Docker for Artifact Registry
         run: |
-          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet || \
-          gcloud auth configure-docker
+          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://${{ env.REGION }}-docker.pkg.dev
 
-      - name: Build Docker image
+      # ------------------------------
+      # 5️⃣ Build and Push Docker Image
+      # ------------------------------
+      - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
+          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ github.sha }}
+          docker build -t $IMAGE_URI .
+          docker push $IMAGE_URI
+        env:
+          CLOUDSDK_CORE_DISABLE_PROMPTS: 1
 
-      - name: Push Docker image
+      # ------------------------------
+      # 6️⃣ Connect to GKE Cluster
+      # ------------------------------
+      - name: Connect to GKE cluster
         run: |
-          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          gcloud container clusters get-credentials ${{ env.CLUSTER_NAME }} --region ${{ env.REGION }} --project ${{ env.PROJECT_ID }}
 
-  deploy:
-    name: Deploy to GKE using Helm
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ env.PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
-
-      - name: Get GKE credentials
+      # ------------------------------
+      # 7️⃣ Deploy with Helm
+      # ------------------------------
+      - name: Deploy with Helm
         run: |
-          gcloud container clusters get-credentials ${{ env.CLUSTER_NAME }} \
-            --region ${{ env.REGION }} --project ${{ env.PROJECT_ID }}
-
-      - name: Deploy using Helm
-        run: |
-          helm upgrade --install ${{ env.DEPLOYMENT_NAME }} ./helm-chart \
-            --set image.repository=${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }} \
-            --set image.tag=${{ github.sha }} \
-            --namespace ${{ env.NAMESPACE }} \
-            --create-namespace
+          helm upgrade --install fastapi-app ./helm-chart \
+            --set image.repository=${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }} \
+            --set image.tag=${{ github.sha }}
 
