--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,15 @@ jobs:
           project_id: ${{ env.PROJECT_ID }}
 
       # ------------------------------
-      # 4️⃣ Configure Docker authentication
+      # 4️⃣ Install GKE Auth Plugin (FIX)
+      # ------------------------------
+      - name: Install GKE Auth Plugin
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+
+      # ------------------------------
+      # 5️⃣ Configure Docker authentication
       # ------------------------------
       - name: Configure Docker for Artifact Registry
         run: |
@@ -47,7 +55,7 @@ jobs:
           gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://${{ env.REGION }}-docker.pkg.dev
 
       # ------------------------------
-      # 5️⃣ Build and Push Docker Image
+      # 6️⃣ Build and Push Docker Image
       # ------------------------------
       - name: Build and Push Docker Image
         run: |
@@ -58,14 +66,14 @@ jobs:
           CLOUDSDK_CORE_DISABLE_PROMPTS: 1
 
       # ------------------------------
-      # 6️⃣ Connect to GKE Cluster
+      # 7️⃣ Connect to GKE Cluster
       # ------------------------------
       - name: Connect to GKE cluster
         run: |
           gcloud container clusters get-credentials ${{ env.CLUSTER_NAME }} --region ${{ env.REGION }} --project ${{ env.PROJECT_ID }}
 
       # ------------------------------
-      # 7️⃣ Deploy with Helm
+      # 8️⃣ Deploy with Helm
       # ------------------------------
       - name: Deploy with Helm
         run: |
