--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -150,20 +150,23 @@ jobs:
         with:
           project_id: ${{ env.PROJECT_ID }}
           export_default_credentials: true
+
       - name: Install GKE Auth Plugin
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+          gcloud components install gke-gcloud-auth-plugin --quiet
+
       - name: Connect to GKE
         run: |
           gcloud container clusters get-credentials ${{ env.CLUSTER_NAME }} --region ${{ env.REGION }} --project ${{ env.PROJECT_ID }}
+
       - name: Deploy with Helm
         run: |
           helm upgrade --install fastapi-app ./helm-chart \
             --set image.repository=${{ env.IMAGE_URI }} \
             --set image.tag=${{ github.sha }}
+
       - name: Verify Deployment
         run: |
           kubectl get pods -l app=fastapi-app -o wide
           kubectl get svc -l app=fastapi-app -o wide
-
